--- a/book.toml
+++ b/book.toml
@@ -1,6 +1,6 @@
 [book]
-title = "The Rust Programming Language"
-author = "Steve Klabnik and Carol Nichols, with Contributions from the Rust Community"
+title = "Rust: la programadlingvo"
+author = "Kontribuanaro de la Rust komunaĵo"
 
 [output.html]
 additional-css = ["ferris.css", "theme/2018-edition.css"]
